--- a/config.yml
+++ b/config.yml
@@ -1,15 +1,15 @@
 # 冲顶大会 iphone6s
 debug: false
-device: ios
-ocr_type: tesseract
+device: android
+ocr_type: baidu
 wda_address: '127.0.0.1:8100'
-question_x: 30
-question_y: 290
-question_w: 650
-question_h: 190
-answer_x: 30
-answer_y: 500
-answer_w: 680
-answer_h: 370
-baidu_api_key: xxx...
-baidu_secret_key: xxx...
+question_x: 80
+question_y: 330
+question_w: 940
+question_h: 170
+answer_x: 105
+answer_y: 540
+answer_w: 920
+answer_h: 450
+baidu_api_key: 
+baidu_secret_key: 
